fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body, html{
-    overflow-y: hidden;
     overflow-x: hidden;
 }
 
